--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -23,6 +23,8 @@
         </div>
         <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js">
         </script>
+        <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js" integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c=" crossorigin="anonymous">
+        </script>
         <script>
             $(document).ready(function(){
                 {% block domready %}
